# corlib

./: CHANGELOG-NOTES.md  CHANGELOG-Notes-v0.5.0-part-2.md  CHANGELOG-Notes-v0.5.0.md  CHANGELOG.md  Cargo.toml  README.md
src/: arc_by_ptr.rs  as_any.rs  as_copy.rs  box_or_ref.rs  cargo_env.rs  control_flow.rs  drop_panic.rs  dropper.rs  enums.rs  gap_filling_counter.rs  get_rc_or_weak_self.rs  get_ref_mut.rs  get_some.rs  getters_setters_callers.rs  has_one.rs  immut.rs  immut_tests.rs  inc_dec.rs  invalid.rs  lazy.rs  lib.rs  may_retry.rs  may_retry_tests.rs  mut_state.rs  non_option.rs  rc_by_ptr.rs  rc_default.rs  refcell_borrowing.rs  result_frame.rs  rfc.rs  sync_weak_by_ptr.rs  text.rs  text_enums.rs  upgrading.rs  value.rs  weak_by_ptr.rs  weak_self.rs  work_in_progress_result.rs
src/any/: any_functions.rs  any_traits.rs  mod.rs
src/cell/: mod.rs  ref_cell_store.rs  rfc.rs  take_it_cell.rs
src/collections/: dictionary.rs  dyn_hashing_and_cmp.rs  dyn_traits.rs  hashset_item.rs  key_value_pair.rs  list.rs  mod.rs  non_default_stacked_vec.rs  queue.rs  stacked_vec.rs  unique_item_list.rs
src/convert/: as_any.rs  mod.rs
src/events/: base_dictionary_weak_rc_event.rs  base_list_event.rs  dictionary_weak_rc_args_event.rs  dictionary_weak_rc_event.rs  list_args_event.rs  list_event.rs  mod.rs  single_sub_args_event.rs  single_sub_event.rs  skip_once.rs
src/events/old/: event_dictionary.rs
src/inc_dec/: inc_dec.rs  mod.rs
src/macros/: mod.rs
src/old/: default_abuser.rs  mut_borrowing.rs  self_has_parent.rs  var_non_option.rs
src/rc/: arc_by_ptr.rs  mod.rs  rc_by_ptr.rs  rc_default.rs  sync_weak_by_ptr.rs  weak_by_ptr.rs
src/serde/: generic_visitor.rs  generic_visitor_expected.rs  mod.rs  skip.rs  skip_tests.rs
src/sync/: mod.rs  notifier.rs
src/text/: as_str.rs  mod.rs  sendable_text.rs  sendable_text_log.rs  sendable_text_log_with_buffer.rs
