[package]
name = "corlib"
version = "0.4.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A various ideas library"
repository = "https://github.com/coruscateor/corlib"
homepage = "https://coruscateor.com/projects/corlib"
keywords = ["general", "various", "ideas", "events", "non-option"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.13.1"
serde = { version = "1.0.214", optional = true }
cfg-if = "1.0.0"
highly_sendable = { version = "0.1.0", optional = true } #Fix
env_var_helpers = { version = "0.1.0", optional = true }
inc_dec = { version = "0.1.0", optional = true }
capped_collections = { version = "0.1.0", optional = true }
accessorise = { version = "0.1.0", optional = true }

[features]
drop_panic = []
#highly_sendable = ["dep:highly_sendable"]
#env_var_helpers = ["dep:env_var_helpers"]
#inc_dec = ["dep:inc_dec"]
#capped_collections = ["dep:capped_collections"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


