[package]
name = "corlib"
version = "0.5.0-alpha"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A various ideas library"
repository = "https://github.com/coruscateor/corlib"
homepage = "https://coruscateor.com/projects/corlib"
keywords = ["general", "various", "ideas", "events", "non-option"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delegate = "0.13.5"
serde = { version = "1.0.228", features = ["derive"], optional = true }
cfg-if = "1.0.4"

[features]
drop_panic = []
#highly_sendable = ["dep:highly_sendable"]
#env_var_helpers = ["dep:env_var_helpers"]
#inc_dec = ["dep:inc_dec"]
#capped_collections = ["dep:capped_collections"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
serde_json = "1.0.150"
#serde_json = { version = "1.0.150", optional = true }
