[package]
name = "corlib"
version = "0.5.0-beta"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A various ideas library"
repository = "https://github.com/coruscateor/corlib"
homepage = "https://coruscateor.com/projects/corlib"
keywords = ["general", "various", "ideas", "events", "non-option"]
authors = ["Paul Saunders"]

[dependencies]
delegate = "0.13.5"
serde = { version = "1.0.228", features = ["derive"], optional = true }
cfg-if = "1.0.4"
corlib_macros = { version = "=0.1.1", optional = true }
#corlib_macros = { path="../corlib_macros", optional = true } #Do not remove

[features]
drop_panic = []
macros = ["dep:corlib_macros"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
serde_json = "1.0.150"
